// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`General|ErrorMessage Error 1`] = `
<div
  className="container comfortable"
>
  <div
    className="container comfortable"
  >
    <div
      className="container"
    >
      <div
        className="messageContainer comfortable"
      >
        <svg
          cursor="default"
          height={80}
          style={
            Object {
              "color": "#666666",
            }
          }
          viewBox="0 0 24 24"
          width={80}
        >
          <path
            clipRule="evenodd"
            d="M4.47 20.5038C2.93 20.5038 1.97 18.8338 2.74 17.5038L10.27 4.49378C11.04 3.16378 12.96 3.16378 13.73 4.49378L21.26 17.5038C22.03 18.8338 21.07 20.5038 19.53 20.5038H4.47ZM19.53 18.5038L12 5.49378L4.47 18.5038H19.53ZM11 10.5038V12.5038C11 13.0538 11.45 13.5038 12 13.5038C12.55 13.5038 13 13.0538 13 12.5038V10.5038C13 9.95378 12.55 9.50378 12 9.50378C11.45 9.50378 11 9.95378 11 10.5038ZM13 17.5038V15.5038H11V17.5038H13Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
        <div
          className="title"
        >
          Oops! Something went wrong!
        </div>
        <div
          className="message"
        >
          Your error message describing how to resolve the problem
        </div>
        <button
          className="container contained outlined primary comfortable"
          disabled={false}
          onClick={[Function]}
          onClickCapture={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          type="button"
        >
          <span
            className="button"
          >
            Resolve the problem
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="overlay"
  />
  <div
    className="snacks"
  />
  <div
    className="dialog"
  />
</div>
`;

exports[`General|ErrorMessage NoAccess 1`] = `
<div
  className="container comfortable"
>
  <div
    className="container comfortable"
  >
    <div
      className="container"
    >
      <div
        className="messageContainer comfortable"
      >
        <svg
          cursor="default"
          height={80}
          style={
            Object {
              "color": "#666666",
            }
          }
          viewBox="0 0 24 24"
          width={80}
        >
          <path
            clipRule="evenodd"
            d="M10 0C4.48 0 0 4.48 0 10C0 15.52 4.48 20 10 20C15.52 20 20 15.52 20 10C20 4.48 15.52 0 10 0ZM2 10C2 5.58 5.58 2 10 2C11.85 2 13.55 2.63 14.9 3.69L3.69 14.9C2.63 13.55 2 11.85 2 10ZM5.1 16.31C6.45 17.37 8.15 18 10 18C14.42 18 18 14.42 18 10C18 8.15 17.37 6.45 16.31 5.1L5.1 16.31Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
        <div
          className="title"
        >
          It seems like you don´t have access to this content
        </div>
        <div
          className="message"
        >
          Your error message describing how to resolve the problem
        </div>
        <button
          className="container contained outlined primary comfortable"
          disabled={false}
          onClick={[Function]}
          onClickCapture={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          type="button"
        >
          <span
            className="button"
          >
            Resolve the problem
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="overlay"
  />
  <div
    className="snacks"
  />
  <div
    className="dialog"
  />
</div>
`;

exports[`General|ErrorMessage NoData 1`] = `
<div
  className="container comfortable"
>
  <div
    className="container comfortable"
  >
    <div
      className="container"
    >
      <div
        className="messageContainer comfortable"
      >
        <svg
          cursor="default"
          height={80}
          style={
            Object {
              "color": "#666666",
            }
          }
          viewBox="0 0 24 24"
          width={80}
        >
          <path
            clipRule="evenodd"
            d="M17.3613 8.53375C17.3613 6.32375 16.4513 4.33375 15.0013 2.89375L16.5113 1.38375C16.8213 1.07375 16.6013 0.533752 16.1513 0.533752H11.3613V5.32375C11.3613 5.77375 11.9013 5.99375 12.2113 5.67375L13.6013 4.28375C14.6813 5.38375 15.3613 6.87375 15.3613 8.53375C15.3613 9.38375 15.1813 10.1938 14.8613 10.9238L16.3413 12.4038C16.9813 11.2538 17.3613 9.94375 17.3613 8.53375ZM7.36129 2.27375V2.08375C7.36129 1.40375 6.65129 0.973752 6.04129 1.26375C5.91463 1.32375 5.79685 1.39264 5.67907 1.46153C5.62018 1.49598 5.56129 1.53042 5.50129 1.56375L6.96129 3.02375C7.20129 2.84375 7.36129 2.57375 7.36129 2.27375ZM0.931294 2.64375C0.541294 2.25375 0.541294 1.62375 0.931294 1.23375C1.11813 1.0465 1.37178 0.941267 1.63629 0.941267C1.90081 0.941267 2.15446 1.0465 2.34129 1.23375L16.8613 15.7638C17.2513 16.1538 17.2513 16.7838 16.8613 17.1738C16.4713 17.5638 15.8413 17.5638 15.4513 17.1738L13.5813 15.3038C13.2913 15.4838 12.9913 15.6538 12.6813 15.7938C12.0713 16.0838 11.3613 15.6538 11.3613 14.9738V14.7938C11.3613 14.3638 11.6813 14.0038 12.1113 13.8838C12.1113 13.8743 12.1113 13.8693 12.1124 13.8645C12.1135 13.8593 12.116 13.8543 12.1213 13.8438L4.05129 5.77375C3.62129 6.60375 3.36129 7.53375 3.36129 8.53375C3.36129 10.1938 4.04129 11.6838 5.12129 12.7838L6.51129 11.3938C6.82129 11.0738 7.36129 11.2938 7.36129 11.7438V16.0338C7.36129 16.3138 7.14129 16.5338 6.86129 16.5338H2.57129C2.12129 16.5338 1.90129 15.9938 2.21129 15.6838L3.72129 14.1738C2.27129 12.7338 1.36129 10.7438 1.36129 8.53375C1.36129 6.97375 1.81129 5.53375 2.58129 4.29375L0.931294 2.64375Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
        <div
          className="title"
        >
          Unfortunately, we could not find any data for this component
        </div>
        <div
          className="message"
        >
          Your error message describing how to resolve the problem
        </div>
        <button
          className="container contained outlined primary comfortable"
          disabled={false}
          onClick={[Function]}
          onClickCapture={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          type="button"
        >
          <span
            className="button"
          >
            Resolve the problem
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="overlay"
  />
  <div
    className="snacks"
  />
  <div
    className="dialog"
  />
</div>
`;

exports[`General|ErrorMessage NotFound 1`] = `
<div
  className="container comfortable"
>
  <div
    className="container comfortable"
  >
    <div
      className="container"
    >
      <div
        className="messageContainer comfortable"
      >
        <svg
          cursor="default"
          height={80}
          style={
            Object {
              "color": "#666666",
            }
          }
          viewBox="0 0 24 24"
          width={80}
        >
          <path
            clipRule="evenodd"
            d="M4.47 20.5038C2.93 20.5038 1.97 18.8338 2.74 17.5038L10.27 4.49378C11.04 3.16378 12.96 3.16378 13.73 4.49378L21.26 17.5038C22.03 18.8338 21.07 20.5038 19.53 20.5038H4.47ZM19.53 18.5038L12 5.49378L4.47 18.5038H19.53ZM11 10.5038V12.5038C11 13.0538 11.45 13.5038 12 13.5038C12.55 13.5038 13 13.0538 13 12.5038V10.5038C13 9.95378 12.55 9.50378 12 9.50378C11.45 9.50378 11 9.95378 11 10.5038ZM13 17.5038V15.5038H11V17.5038H13Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
        <div
          className="title"
        >
          The person could not be found
        </div>
        <div
          className="message"
        >
          Your error message describing how to resolve the problem
        </div>
      </div>
    </div>
  </div>
  <div
    className="overlay"
  />
  <div
    className="snacks"
  />
  <div
    className="dialog"
  />
</div>
`;
